--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -43,10 +43,10 @@ jobs:
         run: docker build -t textmate .
 
       - name: Tag Docker image for ECR
-        run: docker tag textmate:latest ${{ secrets.AWS_ECR_REGISTRY }}/textmate:latest
+        run: docker tag textmate:latest ${{ secrets.AWS_ECR_REGISTRY }}
 
       - name: Push Docker image to ECR
-        run: docker push ${{ secrets.AWS_ECR_REGISTRY }}/textmate:latest
+        run: docker push ${{ secrets.AWS_ECR_REGISTRY }}
 
       - name: Deploy on EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
@@ -67,7 +67,7 @@ jobs:
               | sudo docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_REGISTRY }}
 
             echo "[3] 최신 이미지 Pull"
-            sudo docker pull ${{ secrets.AWS_ECR_REGISTRY }}/textmate:latest
+            sudo docker pull ${{ secrets.AWS_ECR_REGISTRY }}
 
             echo "[4] 기존 백엔드 컨테이너 제거"
             sudo docker rm -f textmate-backend 2>/dev/null || true
@@ -79,6 +79,6 @@ jobs:
               --restart unless-stopped \
               -p 8080:8080 \
               --env-file ~/app.env \
-              ${{ secrets.AWS_ECR_REGISTRY }}/textmate:latest
+              ${{ secrets.AWS_ECR_REGISTRY }}
             
             echo "배포 완료"
