--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -78,6 +78,7 @@ jobs:
             sudo docker run -d --name textmate-backend \
               --restart unless-stopped \
               -p 8080:8080 \
+              --env-file ~/app.env \
               ${{ secrets.AWS_ECR_REGISTRY }}
             
             echo "배포 완료"
