--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -73,12 +73,12 @@ jobs:
             sudo docker rm -f textmate-backend 2>/dev/null || true
 
             echo "[5] 새 컨테이너 실행"
-            test -f ~/app.env || (echo "app.env 없음"; exit 1)
+            ENV_FILE=/home/ubuntu/2025_SEASONTHON_TEAM_8_BE/app.env
+            test -f "$ENV_FILE" || (echo "env 파일 없음: $ENV_FILE"; exit 1)
 
             sudo docker run -d --name textmate-backend \
               --restart unless-stopped \
               -p 8080:8080 \
-              --env-file ~/app.env \
+              --env-file "$ENV_FILE" \
               ${{ secrets.AWS_ECR_REGISTRY }}
-            
-            echo "배포 완료"
+
