--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,6 +25,7 @@ spring:
 
   google:
     client-id: ${GOOGLE_CLIENT_ID}
+    client-android: ${GOOGLE_ANDROID}
     client-secret: ${GOOGLE_CLIENT_SECRET}
     redirect-uri: ${GOOGLE_REDIRECT_URI}
 
